[gd_scene load_steps=8 format=3 uid="uid://du2gx7mogli7y"]

[ext_resource type="Script" path="res://minigames/raheem_battle/cards/hand/card_hand.gd" id="1_dlrp0"]
[ext_resource type="PackedScene" uid="uid://cc1md6wtks64r" path="res://overworld/light/day_night_cycle/day_night_cycle.tscn" id="2_kdbcx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iqfj3"]
size = Vector2(1278, 220)

[sub_resource type="Animation" id="Animation_5x4v2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/offset/held_cards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 695)]
}

[sub_resource type="Animation" id="Animation_h6ykp"]
resource_name = "hide"
length = 0.375004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/offset/held_cards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, 559), Vector2(6, 623), Vector2(6, 655), Vector2(6, 671), Vector2(6, 695)]
}

[sub_resource type="Animation" id="Animation_yb6h0"]
resource_name = "show"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/offset/held_cards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, 695), Vector2(6, 615), Vector2(6, 575), Vector2(6, 543), Vector2(6, 535)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycayi"]
_data = {
"RESET": SubResource("Animation_5x4v2"),
"hide": SubResource("Animation_h6ykp"),
"show": SubResource("Animation_yb6h0")
}

[node name="card_hand" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1281.0
offset_bottom = 723.0
script = ExtResource("1_dlrp0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="offset" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = -2.0
offset_right = 1258.0
offset_bottom = 214.0

[node name="held_cards" type="HBoxContainer" parent="CanvasLayer/offset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 695.0
offset_right = 1277.0
offset_bottom = 911.0
alignment = 1

[node name="DayNightCycle" parent="CanvasLayer" instance=ExtResource("2_kdbcx")]
unique_name_in_owner = true

[node name="victory_chest" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="whatever_chest" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="mouse_detection" type="Area2D" parent="."]
position = Vector2(0, 537)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_detection"]
position = Vector2(639, 74)
shape = SubResource("RectangleShape2D_iqfj3")

[node name="card_hide" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ycayi")
}

[connection signal="area_entered" from="mouse_detection" to="." method="_on_mouse_detection_area_entered"]
[connection signal="area_exited" from="mouse_detection" to="." method="_on_mouse_detection_area_exited"]
